# activities-etl-project

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  docker-compose.yml  env.template  pyproject.toml  setup.py
.github/workflows/: ci.yml
data/: degustations.csv
dbt/ci/: profiles.yml
dbt/dbt_activities/: dbt_project.yml
dbt/dbt_activities/macros/: contact_info.sql  macro_contact_info.sql  macro_safe_drop_pk.sql
dbt/dbt_activities/models/activities/: schema.yml  sources.yml
dbt/dbt_activities/models/staging/: staging_degustation_data.sql  stg_raw_degustation_data.sql
docs/: dbt.md  python.md  terraform.md
orchestration/: assets.py  definitions.py  jobs.py
orchestration/resources/: bastion_tunnel.py
scripts/: create_postgresql_server.py  download_degustation_csv.py  generate_profiles.py  load_raw_data.py  tunnelctl.sh  utils.py
terraform/: cloud-init-postgres.yml  main.tf  nic.tf  outputs.tf  terraform.tfvars.template  variables.tf
terraform_bastion/: nic.tf  outputs.tf  variables.tf
