[project]
name = "activities-etl-project"
version = "0.1.0"
description = "ELT project for degustation activities"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Orchestration
    "dagster>=1.7",
    # DB + dataframe layer
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pandas>=2.0",
    # Settings
    "pydantic-settings>=2.0",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7",
]

ui = [
    "dagster-webserver>=1.7",
]

dbt = [
    "dbt-core>=1.7",
    "dbt-postgres>=1.7",
    "dagster-dbt>=0.28.1",
    "dbt-duckdb>=1.10.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"

[tool.setuptools.packages.find]
exclude=["dagster_tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
